# python-project-template

./: README.md  setup.cfg
docs/: requirements.txt
docs/sources/: conf.py  index.rst
src/: __init__.py
