[metadata]
name = project_name
version = 0.0.0
description = A short description of the project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
author = Your Name
author_email = Your Email


[options]
include_package_data = True
dependency_links=['https://download.pytorch.org/whl/cu117']
packages = find:
python_requires = >=3.9
install_requires =
    anndata==0.8.0
